# LCSD_SLAM

./: README.md  build.sh  cam0_calib_for_dso.txt  cam1_calib_for_dso.txt
DSO/: .gitignore
DSO/src/: main_dso_pangolin.cpp
DSO/src/FullSystem/: CoarseTracker.cpp  CoarseTracker.h  FullSystem.cpp  FullSystem.h  FullSystemMarginalize.cpp  HessianBlocks.h
DSO/src/IOWrapper/: Output3DWrapper.h
DSO/src/util/: DatasetReader.h  ImageAndExposure.h  Undistort.cpp  globalCalib.cpp  globalCalib.h  settings.cpp  settings.h
DSO_ROS/catkin_ws/src/dso_ros/: CMakeLists.txt  package.xml
DSO_ROS/catkin_ws/src/dso_ros/include/dso_ros/: dso_node.h  ros_output_wrapper.h
DSO_ROS/catkin_ws/src/dso_ros/launch/: .gitignore  EuRoC_seong_MH01_cam0.launch  EuRoC_seong_MH01_cam1.launch  EuRoC_seong_MH02_cam0.launch  EuRoC_seong_MH02_cam1.launch  EuRoC_seong_MH03_cam0.launch  EuRoC_seong_MH03_cam1.launch  EuRoC_seong_MH04_cam0.launch  EuRoC_seong_MH04_cam1.launch  EuRoC_seong_MH05_cam0.launch  EuRoC_seong_MH05_cam1.launch  EuRoC_seong_V101_cam0.launch  EuRoC_seong_V101_cam1.launch  EuRoC_seong_V102_cam0.launch  EuRoC_seong_V102_cam1.launch  EuRoC_seong_V103_cam0.launch  EuRoC_seong_V103_cam1.launch  EuRoC_seong_V201_cam0.launch  EuRoC_seong_V201_cam1.launch  EuRoC_seong_V202_cam0.launch  EuRoC_seong_V202_cam1.launch  EuRoC_seong_V203_cam0.launch  EuRoC_seong_V203_cam1.launch  generate_rectifiedFullResolution_sequence1.launch  generate_rectifiedFullResolution_sequence10.launch  generate_rectifiedFullResolution_sequence11.launch  generate_rectifiedFullResolution_sequence12.launch  generate_rectifiedFullResolution_sequence13.launch  generate_rectifiedFullResolution_sequence14.launch  generate_rectifiedFullResolution_sequence15.launch  generate_rectifiedFullResolution_sequence16.launch  generate_rectifiedFullResolution_sequence17.launch  generate_rectifiedFullResolution_sequence18.launch  generate_rectifiedFullResolution_sequence19.launch  generate_rectifiedFullResolution_sequence2.launch  generate_rectifiedFullResolution_sequence20.launch  generate_rectifiedFullResolution_sequence21.launch  generate_rectifiedFullResolution_sequence22.launch  generate_rectifiedFullResolution_sequence23.launch  generate_rectifiedFullResolution_sequence24.launch  (+105 more)
DSO_ROS/catkin_ws/src/dso_ros/msg/: marginalized_msg.msg
DSO_ROS/catkin_ws/src/dso_ros/src/: dso_node.cpp  ros_output_wrapper.cpp
ORB_SLAM2/: .gitignore_temp_disabled  build.sh  build_ros.sh
ORB_SLAM2/Examples/Monocular/: EuRoC_seong_SLAM_cam0.yaml  EuRoC_seong_SLAM_cam1.yaml  EuRoC_seong_VO_cam0.yaml  EuRoC_seong_VO_cam1.yaml  TUM2_dso.yaml~  mono_euroc  mono_kitti  mono_tum
ORB_SLAM2/Examples/RGB-D/: rgbd_tum
ORB_SLAM2/Examples/Stereo/: stereo_euroc  (+1 more)
ORB_SLAM2/include/: Frame.h  FrameDrawer.h  KeyFrame.h  LocalMapping.h  LoopClosing.h  Map.h  MapDrawer.h  MapPoint.h  ORBextractor.h  Optimizer.h  System.h  Tracking.h
ORB_SLAM2/src/: Frame.cc  FrameDrawer.cc  Initializer.cc  KeyFrame.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  MapPoint.cc  Optimizer.cc  Sim3Solver.cc  System.cc  Tracking.cc  Viewer.cc  clear
results_and_matlab/: AggregateResults.m  AlignSimEfficient.m  ComputeATE.m  DSO_DEFAULT_RESULTS_EuRoC_MAV.mat  DSO_REDUCED_RESULTS_EuRoC_MAV.mat  DrawTrajectory.m  GetCorrespondingGroundtruth.m  LoadFromFile.m  ORB_SLAM_RESULTS_EuRoC_MAV.mat  ORB_VO_RESULTS_EuRoC_MAV.mat  OUR_SLAM_RESULTS_EuRoC_MAV.mat  OUR_VO_RESULTS_EuRoC_MAV.mat  OUR_VO_RESULTS_TUM_monoVO.mat  PlotBarGraphs.m  PlotResults_EuRoC_MAV.m  PlotResults_TUM_monoVO.m  ProcessResults_EuRoC_MAV.m  ProcessResults_TUM_monoVO.m  efficientEvalDrift.m  evalLOOPdataset.m  evaluate_result.m  getSortedLOOPError.m  initialize_variables.m  main.m  save_results.m
results_and_matlab/gtFiles/: EuRoC_V1_01_easy.csv  EuRoC_V1_02_medium.csv  EuRoC_V1_03_difficult.csv  EuRoC_V2_01_easy.csv  EuRoC_V2_02_medium.csv  EuRoC_V2_03_difficult.csv  sequence_01.txt  sequence_02.txt  sequence_03.txt  sequence_04.txt  sequence_05.txt  sequence_06.txt  sequence_07.txt  sequence_08.txt  sequence_09.txt  sequence_10.txt  sequence_11.txt  sequence_12.txt  sequence_13.txt  sequence_14.txt  sequence_15.txt  sequence_16.txt  sequence_17.txt  sequence_18.txt  sequence_19.txt  sequence_20.txt  sequence_21.txt  sequence_22.txt  sequence_23.txt  sequence_24.txt  sequence_25.txt  sequence_26.txt  sequence_27.txt  sequence_28.txt  sequence_29.txt  sequence_30.txt  sequence_31.txt  sequence_32.txt  sequence_33.txt  sequence_34.txt  (+16 more)
(+6307 files in other folders)
